# my-functional-frogramming-in-rust

./: .gitignore  Cargo.toml  README.md
chapter1/: Cargo.toml  intro_binding.rs  intro_datatypes.rs  intro_expressions.rs  intro_generics.rs  intro_metaprogramming.rs  intro_mixoopfp.rs  intro_patterns.rs
chapter1/metaderive/: Cargo.toml
chapter1/metaderive/src/: lib.rs
chapter2/: Cargo.toml
chapter2/src/: lib.rs  main.rs
chapter2/tests/: integration_tests.rs
