[package]
name = "chapter1"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "intro_generics"
path = "intro_generics.rs"

[[bin]]
name = "intro_expressions"
path = "intro_expressions.rs"

[[bin]]
name = "intro_binding"
path = "intro_binding.rs"

[[bin]]
name = "intro_datatypes"
path = "intro_datatypes.rs"
